# image-library

./: Image.cpp  Image.h  Makefile  README.md  cmake_install.cmake  main.cpp
Class_Image/: CMakeCache.txt  CMakeLists.txt
DataBase/Descripteur/: descripteur_reference.txt  fantom_poumons_1.txt  fantom_poumons_2.txt  fantom_tete_1.txt  fantom_tete_2.txt
DataBase/Image/DCM/: fantom_tete_1.dcm  fantom_tete_2.dcm
DataBase/Image/TIFF/: fantom_poumons_1.tif  fantom_poumons_2.tif  fantom_tete_1.tif  fantom_tete_2.tif
Sources/Images/: Image.h  main.cpp
UI/Connection/: CMakeLists.txt  descripteur.cpp  descripteur.h  include.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tableau.cpp  tableau.h  tableau.ui
UI/Connection/descripteur/: 1.txt  2.txt  3.txt
UI/Connection/login/: password.txt  role.txt  username.txt
UI/build-Connection-Desktop-Debug/: CMakeCache.txt  Connection  Makefile  cmake_install.cmake
UI/build-Connection-Desktop-Debug/Connection_autogen/: mocs_compilation.cpp
UI/build-Connection-Desktop-Debug/Connection_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_tableau.cpp  moc_tableau.cpp.d
UI/build-Connection-Desktop-Debug/Connection_autogen/include/: ui_mainwindow.h  ui_tableau.h
